--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,7 +28,7 @@ jobs:
         touch database/database.sqlite
   deploy:
     runs-on: ubuntu-latest
-    needs: test # this job depends on "test" having finished
+    needs: laravel-tests # this job depends on "laravel-tests" having finished
     if: github.ref == 'refs/heads/master' # we tell Github to only execute this step if we're on our master branch (so we don't put unfinished branches in production)
     steps:
       - name: Deploying to Digitalocean droplet
