--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,7 +31,7 @@ jobs:
     needs: laravel-tests # this job depends on "laravel-tests" having finished
     if: github.ref == 'refs/heads/master' # we tell Github to only execute this step if we're on our master branch (so we don't put unfinished branches in production)
     steps:
-      - name: Deploying to Digitalocean droplet
+      - name: Deploying to Ubuntu Sever
         uses: appleboy/ssh-action@master # An action made to control Linux servers
         with: # We set all our secrets here for the action, these won't be shown in the action logs
           host: ${{ secrets.HOST }}
