--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -39,5 +39,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            cd /var/www/demo # we move into our app's folder
+            cd /var/www/html/demo # we move into our app's folder
             git pull --ff-only # we pull any changes from git
